[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/Niveles/Musica/Interceptores.wav" type="AudioStream" id=1]
[ext_resource path="res://Juego/Niveles/Musica/Meteoritos.wav" type="AudioStream" id=2]
[ext_resource path="res://Juego/Niveles/Musica/Orbitales.wav" type="AudioStream" id=3]
[ext_resource path="res://Juego/Niveles/Musica/Base.wav" type="AudioStream" id=4]
[ext_resource path="res://Juego/Autoloads/MusicaJuego.gd" type="Script" id=5]
[ext_resource path="res://Juego/Niveles/Musica/Menu.wav" type="AudioStream" id=6]
[ext_resource path="res://Juego/UI/Menu/boton_menu.ogg" type="AudioStream" id=7]

[node name="MusicaJuego" type="Node"]
script = ExtResource( 5 )

[node name="MusicaNivel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Musica"

[node name="MusicaMeteoritos" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Musica"

[node name="MusicaInterceptores" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "Musica"

[node name="MusicaOrbitales" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Musica"

[node name="TweenMusicaOn" type="Tween" parent="."]

[node name="TweenMusicaOff" type="Tween" parent="."]

[node name="MusicaMenuPrincipal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Musica"

[node name="BotonMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Botones"

[connection signal="tween_completed" from="TweenMusicaOff" to="." method="_on_TweenMusicaOff_tween_completed"]
